[package]
name = "suika-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "wayland", "bevy_winit", "bevy_pbr", "png"] }
bevy_xpbd_2d = { path = "../bevy_xpbd/crates/bevy_xpbd_2d" }
bevy_hanabi = { path = "../bevy_hanabi" }
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.3"
once_cell = "1.18.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
